[gd_scene load_steps=3 format=2]

[ext_resource path="res://ship/Ship.gd" type="Script" id=1]
[ext_resource path="res://ship/Ship.png" type="Texture" id=2]

[node name="Ship" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
created_bullet_scale_factor = 1
created_bullet_speed = 400
bullet_caliber = 2

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -24, -15, -13, -15, -13, -31, -7, -31, -7, -10, -5, -10, -5, -2, 5, -2, 5, -10, 7, -10, 7, -31, 13, -31, 13, -15, 24, -15, 29, -10, 29, 0, 31, 1, 31, 10, 29, 13, 28, 13, 28, 21, 26, 21, 26, 23, 25, 24, 17, 24, 17, 26, 15, 26, 15, 30, 11, 30, 11, 28, -11, 28, -11, 30, -15, 30, -15, 26, -17, 26, -17, 24, -25, 24, -26, 23, -26, 21, -28, 21, -28, 13, -29, 13, -31, 10, -31, 1, -29, 0, -29, -10 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D" index="0"]

visible = false
scale = Vector2( 1.1, 1.1 )
build_mode = 0
polygon = PoolVector2Array( -24, -15, -13, -15, -13, -31, -7, -31, -7, -10, -5, -10, -5, -2, 5, -2, 5, -10, 7, -10, 7, -31, 13, -31, 13, -15, 24, -15, 29, -10, 29, 0, 31, 1, 31, 10, 29, 13, 28, 13, 28, 21, 26, 21, 26, 23, 25, 24, 17, 24, 17, 26, 15, 26, 15, 30, 11, 30, 11, 28, -11, 28, -11, 30, -15, 30, -15, 26, -17, 26, -17, 24, -25, 24, -26, 23, -26, 21, -28, 21, -28, 13, -29, 13, -31, 10, -31, 1, -29, 0, -29, -10 )
_sections_unfolded = [ "Transform" ]

[node name="BulletPosition2D_left" type="Position2D" parent="." index="3"]

position = Vector2( -10, -44 )
_sections_unfolded = [ "Transform" ]

[node name="BulletPosition2D_right" type="Position2D" parent="." index="4"]

position = Vector2( 10, -44 )
_sections_unfolded = [ "Transform" ]

[node name="TimerShoot" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="6"]

visible = false
position = Vector2( -6.85453e-07, 0.500002 )
scale = Vector2( 3.1, 4.25 )
rect = Rect2( -10, -10, 20, 20 )

[node name="Camera2D" type="Camera2D" parent="." index="7"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="timeout" from="TimerShoot" to="." method="_on_TimerShoot_timeout"]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


